src/styles.css
:root {
    font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
    font-size: 16px;
    line-height: 1.2;
    font-weight: 400;

    color: #ffffff;
    background-color: #341e34;

    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    -webkit-text-size-adjust: 100%;

    --dark-purple: #25022e;
    --background-purple: #341e34;
}

body {
    overflow-x: hidden;
}

#titlebar {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    display: flex;
    height: 32px;

    background: var(--background-purple);
    color: white;
    align-items: center;
    justify-content: space-between;
    padding: 2px;
    margin: 0;
    font-size: 0.9em;
    -webkit-app-region: drag;
    user-select: none;


    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

#titlebar>* {
    width: 50%;
    vertical-align: middle;
}

#titlebar * {
    vertical-align: middle;
}


#window-buttons {
    display: block;
    width: 100%;
    text-align: right
}

#app-icon {
    vertical-align: middle;
}

#window-buttons>button {
    text-align: center;
    align-items: center;
    -webkit-app-region: no-drag;
    background: transparent;
    border: none;
    border-radius: 8px;
    color: white;
    font-size: 14px;
    cursor: pointer;
    aspect-ratio: 1 / 1;
}

#window-buttons>button>img {
    width: 20px;
    height: auto;
}

#window-buttons>button:hover {
    background: var(--dark-purple);
    border: none;
}

::-webkit-scrollbar {
    width: 10px;
}

::-webkit-scrollbar-thumb {
    width: 5px;
    border-radius: 12px;
    background-color: var(--dark-purple);
}

#page-content {
    margin: 30px 0 22px 0;
    padding: 10px 5px;
    display: flex;
    gap: 10px;
}

.editable:focus {
    outline: none;
}

.editable:empty::before {
    content: attr(data-placeholder);
    color: gray;
    ;
}

#page-title {
    font-weight: bold;
    font-size: 1.5rem;
    margin: 0 0 15px;
}

#markdown-preview {
    display: block;
}


#page-content>* {
    box-sizing: border-box;
    min-width: 50%;
    flex-grow: 1;
    vertical-align: top;
    word-wrap: break-word;
}

#raw-content {
    background-color: inherit;
    color: inherit;
    font: inherit;
    border: none;
    resize: none;
    width: 100%;
    line-height: 1.4em;
}

#status-bar {
    position: fixed;
    height: fit-content;
    bottom: 0;
    right: -1px;
    color: gray;
    text-align: right;
    font-size: 0.75rem;
}

#status-bar-components {
    width: fit-content;
    padding: 5px 4px 5px 5px;
    margin: 0;
}


@keyframes fadeOut {
    from {
        opacity: 100%;
    }

    to {
        opacity: 0%;
        display: none;
    }
}

@keyframes slideIn {
    from {
        transform: translateX(100%);
        opacity: 0%;
    }

    to {
        transform: translateX(0);
        opacity: 100%;
    }
}

.fadeOut {
    animation: fadeOut 0.5s forwards !important;
}

.toast {
    position: fixed;
    bottom: 20px;
    right: 10px;
    width: fit-content;
    background-color: var(--dark-purple);
    color: white;
    padding: 15px 20px;
    border-radius: 8px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
    z-index: 9999;
    animation: slideIn 0.5s forwards;
}


/* Markdown adjustments */

#markdown-preview>blockquote {
    margin-left: 1em;
    padding-left: 0.5em;
    border-left: 3px solid #ccc;
    color: #666;
}

